--- a/app/src/main/res/layout/highscore_activity.xml
+++ b/app/src/main/res/layout/highscore_activity.xml
@@ -47,14 +47,32 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/mainMenu"
+            android:id="@+id/replay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="sans-serif-smallcaps"
-            android:text="@string/main_menu"
+            android:text="@string/play_again"
             android:textColor="#FFEB3B"
             android:textSize="30sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_marginBottom="30dp"
+            android:gravity="bottom|center_horizontal">
+
+            <TextView
+
+                android:id="@+id/mainMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-smallcaps"
+                android:text="@string/main_menu"
+                android:textColor="#84FFFB"
+                android:textSize="25sp" />
+        </LinearLayout>
+
 
 
     </LinearLayout>
